--- a/home exercice/tips.html
+++ b/home exercice/tips.html
@@ -32,6 +32,9 @@
         <video src="covid.mp4" controls style="height: 200px; 
         width: 300px; float:left;" loop>How COVID-19 can be transmitted?</video>
         <br>
+        <audio controls>
+        <source src="myaudio.ogg" type="audio/mp3">
+    </audio>
     <p>
         <q> Fully vaccinated</q> means that you completed a COVID-19
         vaccine series as recommended for the best protection against
@@ -57,9 +60,6 @@
             vulnerable populations.</q>
     </p>
     </div>
-    <audio controls>
-        <source src="myaudio.aac" type="audio/mp3">
-    </audio>
     <table>
         <thead>
             <tr>
