--- a/home exercice/tips.html
+++ b/home exercice/tips.html
@@ -33,7 +33,7 @@
         width: 300px; float:left;" loop>How COVID-19 can be transmitted?</video>
         <br>
         <audio controls>
-        <source src="myaudio.ogg" type="audio/mp3">
+        <source src="audio.ogg" type="audio/mp3">
         </audio>
     <p>
         <q> Fully vaccinated</q> means that you completed a COVID-19
