--- a/home exercice/tips.html
+++ b/home exercice/tips.html
@@ -17,7 +17,7 @@
          font-size: 20px;color: white;">Tips</a>
         <a href="getintouch.html" style="margin: 1cm; text-decoration: none; 
         font-size: 20px;color: white;">Get In Touch</a>
-        <a href="mailto:Sdosso031@gmail.com" style=" text-decoration: none;
+        <a href="mailto:jallahfarkollie9@gmail.com" style=" text-decoration: none;
          font-size: 20px;color: white;">Email Us</a>
         </h1>
     </header>
@@ -33,7 +33,7 @@
         width: 300px; float:left;" loop>How COVID-19 can be transmitted?</video>
         <br>
         <audio controls>
-        <source src="audio.ogg" type="audio/mp3">
+        <source src="jallah.ogg" type="audio/mp3">
         </audio>
     <p>
         <q> Fully vaccinated</q> means that you completed a COVID-19
